<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 手站登陆注册-首页================================================================ -->
    <string name="register_shouzhan">开通手站</string>
    <string name="login_shouzhan">登陆手站</string>
    <string name="btn_back">返回</string>
    <!-- 手站登陆注册-Dialog============================================================== -->
    <string name="comm_dialog_message">此号码已经注册过!</string>
    <string name="pwd_err_msg">密码与账号不匹配！</string>
    <string name="login_err_msg">此号码尚未注册，请先注册！</string>
    <string name="cancel_dialog">取消</string>
    <string name="login_dialog">登陆</string>
    <string name="register_dialog">注册</string>
    <string name="found_dialog">找回密码</string>
    <!-- 手站登陆注册-手机验证页面========================================================= -->
    <string name="phone_check">1 手机验证></string>
    <string name="pwd_set">2 密码设置></string>
    <string name="pay_years">3 支付年费</string>
    <string name="input_phone_msg">请输入您的手机号码</string>
    <string name="read_shouzhan">我已阅读并同意</string>
    <string name="send_check">发送验证码</string>
    <string name="shouzhan_xieyi"><u>手站用户协定</u></string>
    <string name="input_code_msg">请输入短信验证码</string>
    <string name="send_again">再次发送</string>
    <string name="confirm">确定</string>
    <!-- 手站登陆注册-密码设置页面========================================================= -->
    <string name="register_pwd">设置密码</string>
    <string name="input_pwd">请输入6-16为密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <!-- 手站登陆注册-支付年费页面========================================================= -->
    <string name="more_three_years">一次最多开通3年</string>
    <string name="shouzhan_years">手站年费:</string>
    <string name="open_years">开通年数:</string>
    <string name="money_add">订单总价:</string>
    <string name="online_pay">在线支付年费</string>
    <string name="people_pay">预约专员上门</string>
    <string name="people_pay_msg">预约专员上门收费</string>
    <string name="people_name">姓名：王小二</string>
    <string name="people_phone">座机：400-88-99转12</string>
    <string name="people_mobile">移动电话：18888888876</string>
    <string name="people_qq">QQ：86689656</string>
    <string name="people_work">工作时间：周一至周五        8:00——18:00</string>
    <string name="reselect_pay">重新选择支付方式</string>
    <string name="confirm_years">订购年数:</string>
    <string name="confirm_name">订单名称:</string>
    <string name="confirm_price">订单总价:</string>
    <string name="confirm_name_msg">手站年服务费用</string>
    <string name="card_pay">银行卡支付</string>
    <string name="card_pay_msg">支付储蓄卡信用卡，无需开通...</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat_pay_msg">推荐安装微信5.0及以上版本使用</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="ali_pay_msg">推荐有支付宝账号的用户使用</string>
    <string name="success_pay">支付成功</string>
    <string name="success_pay_msg">手站已开通，现在可以</string>
    <string name="manager_shouzhan">管理手站</string>
    <string name="service_phone">客服电话：400-888-888</string>
    <!-- 手站登陆注册-登陆页面=========================================================== -->
    <string name="login">登陆</string>
    <string name="l_input_phone">请输入手机号</string>
    <string name="l_input_pwd">请输入密码</string>
    <string name="l_forget_pwd">忘记密码?</string>
    <!-- 手站登陆注册-密码重置-手机验证=================================================== -->
    <string name="input_register_phone">请输入注册时的手机号码</string>
    <string name="pwd_set_login">2 密码设置</string>
    <!-- 手站登陆注册-登陆页面-Toast msg================================================== -->
    <string name="submit_code_success">提交验证码成功</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="code_busy">验证码频繁，请稍后再试！</string>
    <string name="code_error">验证码错误</string>
    <string name="please_read">请阅读并同意手站用户协定！</string>
    <string name="pwd_set_success">密码设置成功</string>
    <string name="pwd_reset_success">密码重置成功</string>
    <string name="pwd_set_notsame">两次密码输入不一致，请重新输入</string>
    <string name="pwd_set_notpwd">密码不合法，请重新输入</string>
    <string name="pwd_set_ispwd">密码合法</string>
    <!-- ================================================================================ -->
    
    <!-- 已开通手站-产品================================================================== -->
    <string name="new_product">最新产品</string>
    <string name="class_product">分类</string>
    <string name="pro_title">奥特曼变身棒M78星云正版进口货</string>
    <string name="pro_price">价格面议</string>
    <string name="class_pro_msg">商品分类</string>
    <string name="class_pro_gyp">工艺品</string>
    <string name="class_pro_bsq">变身器</string>
    <string name="class_pro_sb">随便</string>
    <string name="class_pro_zjsc">最近上传</string>
    <string name="manager_class">管理分类</string>
    <!-- ================================================================================ -->


    <!-- 点入的appkey -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_key">0000B1422300006F</string>
    <string name="app_name">手站</string>
    <string name="app_content">手站是一款项目</string>

    <!-- tab -->
    <string name="tab_shouzhan">手站</string>
    <string name="tab_shangchuan">上传</string>
    <string name="tab_guanli">管理</string>
    <string name="tab_erweima">二维码</string>
    <string name="my_shouzhan">我的手站</string>

    <!-- 手站 -->
    <string name="shouye">首页</string>
    <string name="chanpin">产品</string>
    <string name="gongsi">公司</string>
    <string name="lianxi">联系</string>
    <string name="yingwen">EN</string>
    <!-- 管理 -->
    <string name="edit_product">编辑产品</string>
    <string name="product_pic">产品图片</string>
    <string name="product_name">产品名称</string>
    <string name="input_product_name">请输入产品名称</string>
    <string name="product_price">产品价格</string>
    <string name="input_product_price">不写默认面议</string>
    <string name="product_sort">产品分类</string>
    <string name="product_intro">产品说明</string>
    
    
    <!-- 管理 -->
    <string name="shoudianguanli">手店管理</string>
    <string name="shangchuan">上传产品</string>
    <string name="guanlichanpin">管理产品</string>
    <string name="guanlifenlei">管理分类</string>
    <string name="gongsijieshao">公司介绍</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="mobanguanli">模板管理</string>
    <string name="waiwenwangzhan">外文网站</string>
    <string name="yaoqinghaoyou">邀请好友</string>
    <string name="guanli_lianxi">管理联系</string>
    <string name="delete_message">确认是否删除？</string>
    <string name="quxiao">取消</string>
    <string name="queding">确定</string>
    <string name="delete_sucess">删除成功</string>

    <!-- 管理 公司 -->
    <string name="manage_company_intro">管理公司介绍</string>
    <string name="manage_company">管理公司</string>
    <string name="complete">完成</string>
    <string name="shangchuantupian">上传图片</string>
    <string name="fangda">放大</string>
    <string name="company_name">公司名称</string>
    <string name="input_company_name">请输入公司名称</string>
    <string name="company_intro">公司介绍</string>
    <string name="tijiao">提交</string>

    <!-- 管理 联系方式 -->
    <string name="mobile">手机</string>
    <string name="telephone">固定电话</string>
    <string name="contacts">联系人</string>
    <string name="QQ">QQ</string>
    <string name="weixin">微信</string>
    <string name="other_url">其他网址</string>
    <string name="in_area">所在地区</string>
    <string name="details_address">详细地址</string>
    <string name="submit">上传</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="input_telephone">请输入电话号码</string>
    <string name="input_contacts">请输入联系人</string>
    <string name="input_qq">请输入QQ号</string>
    <string name="input_weixin">请输入微信号</string>
    <string name="input_url">请输入网站</string>
    <string name="input_address">请输入详细地址</string>
    <string name="manage_contacts_style">管理联系方式</string>
    <string name="mobile2">手机：</string>
    <string name="telephone2">固定电话：</string>
    <string name="contacts2">联系人：</string>
    <string name="QQ2">QQ：</string>
    <string name="weixin2">微信：</string>
    <string name="address2">地址：</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="preview">预览效果</string>
    <string name="map_navigation">地图导航</string>

    <!-- 模板管理 -->
    <string name="moban_manage">Model Manage</string>
    <string name="button_style">按钮样式</string>
    <string name="background_pic">背景图片</string>
    <string name="select_button_style">选择按钮样式</string>
    <string name="check">查看</string>
    <string name="xuanyong">选用</string>
    <string name="from_photo">从手机相册选取</string>
    <string name="from_camera">拍一张</string>
    <string name="from_teacher">摄影师作品</string>

    <!-- 邀请好友 -->
    <string name="invite_friend">邀请好友</string>
    <string name="back">返回</string>
    <string name="invite_content">邀请好友也来开通手站吧~</string>
    <string name="share">分享</string>
    <string name="copy">复制</string>
    <string name="erweima">二维码</string>
    <string name="positive">确定</string>
    <string name="download">下载</string>
    <string name="download_message">确定要下载二维码图片？</string>

    <!-- 更多 -->
    <string name="load_data">正在加载,请稍候&#8230;</string>

    <!-- 按钮上字符串 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>