<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.zykj.shouzhan.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/invite_content"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/touxiang" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_share"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:background="@color/btn_lgrey"
                 android:textSize="16sp"
                android:text="@string/share"
                android:textColor="@color/background_title" />

            <TextView
                android:id="@+id/btn_copy"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                 android:background="@color/btn_lgrey"
                android:text="@string/copy"
                android:textSize="16sp"
                android:textColor="@color/background_title" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>