<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.zykj.shouzhan.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_erweima" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:id="@+id/btn_share"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/btn_lgrey"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/background_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_copy"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/btn_lgrey"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="@color/background_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_download"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/btn_lgrey"
                android:gravity="center"
                android:text="@string/download"
                android:textColor="@color/background_title"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>