<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.zykj.shouzhan.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/product_pic"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/img_product_pic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_upload" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_shouzhan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/product_name"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ed_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/bg_null_white"
                        android:gravity="center_vertical"
                        android:hint="@string/input_product_name" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_shouzhan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/product_price"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ed_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/bg_null_white"
                        android:gravity="center_vertical"
                        android:hint="@string/input_product_price" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_shouzhan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/product_sort"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_product_sort"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/icon_zhankai_norma" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_shouzhan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/product_intro"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ed_product_intro"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/bg_null_grey" />

                    <TextView
                        android:id="@+id/tv_complete"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/baby_red"
                        android:gravity="center"
                        android:text="@string/complete"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>